bugfix hero margin on mobile device

--- a/assets/scss/components/_ce_hero.scss
+++ b/assets/scss/components/_ce_hero.scss
@@ -70,10 +70,8 @@
   padding: 0;
 
   .content_container{
-    @include wrapper-max;
-    //margin set via wrapper-max [1]
+    max-width: $wrapper-max;
     @include padding-default;
-
   }
 }
 
